<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/characters_menu_item_action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_toggle_alive"
        android:checkable="true"
        android:title="@string/characters_menu_item_action_toggle_alive"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_dead"
        android:checkable="true"
        android:title="@string/characters_menu_item_action_toggle_dead"
        app:showAsAction="never" />

</menu>
